# document-qna

./: README.md
doc-summarizer-be/: .env.example  .gitignore  API_Documentation.md  README.md  docker-compose.yaml  pyproject.toml
doc-summarizer-be/app/: main.py
doc-summarizer-be/app/api/: deps.py  main.py
doc-summarizer-be/app/api/routes/: chat.py  file.py  session.py
doc-summarizer-be/app/core/: config.py
doc-summarizer-be/app/core/chain/: base_completion.py  chat_completion.py  completion.py  other_completion.py  prompts.py
doc-summarizer-be/app/core/indexers/: qdrant.py
doc-summarizer-be/app/core/models/: chat.py  chat_model.py  chat_response.py  completion_model.py  docs.py  enum.py  file.py  file_model.py  file_response.py  generic_response.py  session.py  session_model.py  session_response.py  util.py
doc-summarizer-be/app/core/utils/: chat.py  file.py  qdrant.py
doc-summarizer-be/app/crud/: __init__.py  base.py  crud_chat.py  crud_file.py  crud_session.py
doc-summarizer-be/app/db/: session.py
doc-summarizer-be/scripts/: gen-doc-mkdwn.py
doc-summarizer-be/tests/: index-docs.py  test-nvidia-mistral.py  test-qdrant.py
doc-summarizer-be/tests/core/: config.py
doc-summarizer-be/tests/core/chain/: completion.py  prompts.py
doc-summarizer-be/tests/core/indexers/: qdrant.py
doc-summarizer-be/tests/docs/: amazon-rainforest.docx  amazon-rainforest.txt  data-centers.docx  data-centers.txt
doc-summarizer-be/tests/utils/: qdrant.py
doc-summarizer-fe/: .gitignore  eslint.config.mjs  package-lock.json  package.json
(+41 files in other folders)
